--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   device_info_plus: ^11.3.0
   url_launcher: ^6.3.1
   permission_handler: ^11.4.0
-
+  mobile_number: ^3.0.0
 
 dev_dependencies:
   flutter_test:
