--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   url_launcher: ^6.3.1
   permission_handler: ^11.4.0
   mobile_number: ^3.0.0
+  just_audio: ^0.9.46
+  flutter_sound: ^9.24.5
+  path_provider: ^2.1.5
+
 
 dev_dependencies:
   flutter_test:
