--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   syncfusion_flutter_datagrid: ^28.2.3
   shared_preferences: ^2.3.5
   http: ^1.2.2
+  uuid: ^4.5.1
   fluttertoast: ^8.2.10
   intl: ^0.20.2
   device_info_plus: ^11.3.0
