--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  package_info_plus: ^8.3.0
   syncfusion_flutter_datagrid: ^28.2.3
   shared_preferences: ^2.3.5
   http: ^1.2.2
@@ -41,6 +42,7 @@ dependencies:
   fluttertoast: ^8.2.10
   intl: ^0.20.2
   device_info_plus: ^11.3.0
+  avatar_glow: ^3.0.1
   url_launcher: ^6.3.1
   permission_handler: ^11.4.0
   mobile_number: ^3.0.0
